# libray

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  default.nix  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  shell.nix
nix/: overrides.nix  scripts.nix  service.nix  sources.nix
nix/nginx/: default.nix
nix/test/: app.nix  configuration.nix  secrets.nix.example
nix/test/postgres/: default.nix
